fix collapsable button and focus states

--- a/app/assets/stylesheets/components/editorial/_collapsible.scss
+++ b/app/assets/stylesheets/components/editorial/_collapsible.scss
@@ -17,6 +17,11 @@
     color: $color-action-item-heading;
     width: 100%;
     text-align: left;
+
+    &:focus,
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   .icon--toggle {
